# TrainTicketOrder

./: CMakeLists.txt  README.md
data/: consumeTicket.json  station.json  userInfo.json
include/: ConstValue.h  JsonUtil.h  LoginAndRegister.h  OperationForTickets.h  Order.h  Ticket.h  User.h  adminOpration.h
src/: JsonUtil.cpp  LoginAndRegister.cpp  OperationForTickets.cpp  Order.cpp  Ticket.cpp  User.cpp  adminOpration.cpp  main.cpp
